2008-08-15  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/x86_64/pthreaddef.h: Remove ARCH_MAP_FLAGS and
	ARCH_RETRY_MMAP definitions.
	* allocatestack.c: Remove definition of ARCH_MAP_FLAGS.
	Define MAP_STACK when not defined.
	(allocate_stack): Use MAP_STACK instead of ARCH_MAP_FLAGS.  Remove
	handling of ARCH_RETRY_MMAP.

2008-07-30  Ulrich Drepper  <drepper@redhat.com>

	* tst-align2.c (f): Print message that f is reached.

2008-04-28  Hiroki Kaminaga  <kaminaga@sm.sony.co.jp>

	[BZ #6740]
	* sysdeps/powerpc/tcb-offsets.sym (PRIVATE_FUTEX_OFFSET): Guard symbol
	definition with #ifndef __ASSUME_PRIVATE_FUTEX.

2008-07-25  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/mq_notify.c (init_mq_netlink): Use
	SOCK_CLOEXEC if possible.

2008-05-29  Ulrich Drepper  <drepper@redhat.com>

	* Makefile (tests): Add tst-rwlock2a.
	* tst-rwlock2.c: Use TYPE macro to decide what rwlock type to use.
	* tst-rwlock2a.c: New file.

2008-06-12  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/pthread/pthread.h: Remove inadvertant checkin.

2008-05-17  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* sysdeps/pthread/pthread.h: Fix typo in comment.

2008-05-28  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/pthread/createthread.c (do_clone): Pass accurate length
	of CPU set to the kernel.

2008-05-23  Paul Pluzhnikov  <ppluzhnikov@google.com>

	* sysdeps/unix/sysv/linux/i386/i486/pthread_barrier_wait.S: Add
	cfi directives.
	* sysdeps/unix/sysv/linux/i386/i486/pthread_cond_broadcast.S: Likewise.
	* sysdeps/unix/sysv/linux/i386/i486/pthread_cond_signal.S: Likewise.
	* sysdeps/unix/sysv/linux/i386/i486/pthread_rwlock_rdlock.S: Likewise.
	* sysdeps/unix/sysv/linux/i386/i486/pthread_rwlock_unlock.S: Likewise.
	* sysdeps/unix/sysv/linux/i386/i486/pthread_rwlock_wrlock.S: Likewise.
	* sysdeps/unix/sysv/linux/i386/i486/sem_post.S: Likewise.

2008-05-22  Paul Pluzhnikov  <ppluzhnikov@google.com>

	* sysdeps/unix/sysv/linux/i386/i486/pthread_rwlock_timedrdlock.S: Add